--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"axios": "^0.20.0",
 		"body-parser": "^1.19.0",
+		"chalk": "^4.1.0",
 		"cheerio": "^1.0.0-rc.3",
 		"cmdify": "0.0.4",
 		"express": "^4.17.1",
